[package]
name = "vitasdk-sys"
version = "0.1.1"
authors = ["Aphek <bilkow@tutanota.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/vita-rust/vitasdk-sys"
homepage = "https://github.com/vita-rust/vitasdk-sys"
description = "Raw bindings to vitasdk"
keywords = ["vitasdk", "psvita", "vita", "ffi"]
categories = ["external-ffi-bindings"]
links = "vitasdk_stubs"
exclude = [".gitmodules", ".gitignore"]

[workspace]
members = ["examples/*"]
exclude = ["generator"]

[profile.release]
lto = true
