[package]
name = "vitasdk-sys"
version = "0.2.0"
authors = ["Aphek <bilkow@tutanota.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/vita-rust/vitasdk-sys"
homepage = "https://github.com/vita-rust/vitasdk-sys"
description = "Raw bindings to vitasdk"
keywords = ["vitasdk", "psvita", "vita", "ffi"]
categories = ["external-ffi-bindings"]
links = "vitasdk_stubs"
exclude = [".gitmodules", ".gitignore"]

[workspace]
members = ["examples/*"]

[profile.release]
lto = true

[build-dependencies]
bindgen = "0.68.1"
vitasdk-sys-build-util = { path = "build-util", features = ["link-visitor"] }
camino = "1.1.6"
env_logger = "0.10.0"
log = "0.4.20"
quote = { version = "1.0.33", default-features = false }
regex = { version = "1.9.5", default-features = false, features = ["std", "perf"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
default-target = "armv7-sony-vita-newlibeabihf"
targets = []
cargo-args = ["-Z", "build-std"]

[features]
vitasdk-utils = []

# Stub libraries
SceAVConfig_stub = []
SceAppMgrForDriver_stub = []
SceAppMgr_stub = []
SceAppUtil_stub = []
SceAtrac_stub = []
SceAudioIn_stub = []
SceAudio_stub = []
SceAudiodec_stub = []
SceAudioenc_stub = []
SceAvPlayer_stub = []
SceAvcodecForDriver_stub = []
SceAvcodecUser_stub = []
SceAvcodec_stub = []
SceBacktraceForDriver_stub = []
SceBbmc_stub = []
SceBgAppUtil_stub = []
SceBtForDriver_stub = []
SceBt_stub = []
SceCameraForDriver_stub = []
SceCamera_stub = []
SceClipboard_stub = []
SceClockgenForDriver_stub = []
SceCodecEnginePerf_stub = []
SceCodecEngineWrapper_stub = []
SceCodecEngine_stub = []
SceCommonDialog_stub = []
SceCompat_stub = []
SceCoredumpForDriver_stub = []
SceCoredump_stub = []
SceCpuForDriver_stub = []
SceCpuForKernel_363_stub = []
SceCpuForKernel_stub = []
SceCtrlForDriver_stub = []
SceCtrl_stub = []
SceDTrace_stub = []
SceDebugForDriver_stub = []
SceDebugForKernel_363_stub = []
SceDebugForKernel_stub = []
SceDebugLedForDriver_stub = []
SceDeci4pDbgpForDriver_stub = []
SceDeci4pUserp_stub = []
SceDipswForDriver_stub = []
SceDisplayForDriver_stub = []
SceDisplay_stub = []
SceDmacmgrForDriver_stub = []
SceDriverUser_stub = []
SceDsiForDriver_stub = []
SceError_stub = []
SceExcpmgrForKernel_363_stub = []
SceExcpmgrForKernel_stub = []
SceFace_stub = []
SceFiber_stub = []
SceFios2KernelForDriver_stub = []
SceFios2Kernel_stub = []
SceFios2_stub = []
SceGameUpdate_stub = []
SceGpioForDriver_stub = []
SceGps_stub = []
SceGpuEs4ForDriver_stub = []
SceGpuEs4_stub = []
SceGxm_stub = []
SceHandwriting_stub = []
SceHidForDriver_stub = []
SceHid_stub = []
SceHttp_stub = []
SceI2cForDriver_stub = []
SceIdStorageForDriver_stub = []
SceIftuForDriver_stub = []
SceIme_stub = []
SceIncomingDialog_stub = []
SceIntrmgrForDriver_stub = []
SceIntrmgrForKernel_stub = []
SceIofilemgrForDriver_stub = []
SceIofilemgr_stub = []
SceJpegArm_stub = []
SceJpegEncArm_stub = []
SceJpegEnc_stub = []
SceJpeg_stub = []
SceKernelBootimage_stub = []
SceKernelDmacMgr_stub = []
SceKernelModulemgr_stub = []
SceKernelSuspendForDriver_stub = []
SceKernelThreadMgr_stub = []
SceKernelUtilsForDriver_stub = []
SceLcdForDriver_stub = []
SceLedForDriver_stub = []
SceLibDbg_stub = []
SceLibG729_stub = []
SceLibJson_stub = []
SceLibKernel_stub = []
SceLibMono_stub = []
SceLibMp4Recorder_stub = []
SceLibMtp_stub = []
SceLibXml_stub = []
SceLiveArea_stub = []
SceLocationExtension_stub = []
SceLocation_stub = []
SceLsdb_stub = []
SceModulemgrForDriver_stub = []
SceModulemgrForKernel_363_stub = []
SceModulemgrForKernel_stub = []
SceMotionDevForDriver_stub = []
SceMotionDev_stub = []
SceMotion_stub = []
SceMsifForDriver_stub = []
SceMtpIfDriver_stub = []
SceMusicExport_stub = []
SceNearDialogUtil_stub = []
SceNearUtil_stub = []
SceNetAdhocMatching_stub = []
SceNetCtl_stub = []
SceNetPsForDriver_stub = []
SceNetPs_stub = []
SceNet_stub = []
SceNgsUser_stub = []
SceNgs_stub = []
SceNotificationUtil_stub = []
SceNpActivity_stub = []
SceNpBasic_stub = []
SceNpCommerce2_stub = []
SceNpCommon_stub = []
SceNpDrmForDriver_stub = []
SceNpDrm_stub = []
SceNpManager_stub = []
SceNpMatching2_stub = []
SceNpMessage_stub = []
SceNpParty_stub = []
SceNpScore_stub = []
SceNpSignaling_stub = []
SceNpSnsFacebook_stub = []
SceNpTrophy_stub = []
SceNpTus_stub = []
SceNpUtility_stub = []
SceNpWebApi_stub = []
SceOledForDriver_stub = []
ScePaf_stub = []
ScePamgr_stub = []
ScePerf_stub = []
ScePervasiveForDriver_stub = []
ScePfsMgrForKernel_stub = []
ScePgf_stub = []
ScePhotoExport_stub = []
ScePmMgrForDriver_stub = []
ScePowerForDriver_stub = []
ScePower_stub = []
SceProcEventForDriver_stub = []
SceProcessmgrForDriver_stub = []
SceProcessmgrForKernel_363_stub = []
SceProcessmgrForKernel_stub = []
SceProcessmgr_stub = []
ScePromoterUtil_stub = []
ScePsmDrmForDriver_stub = []
ScePspnetAdhoc_stub = []
ScePvf_stub = []
SceQafMgrForDriver_stub = []
SceRazorCapture_stub = []
SceRazorHud_stub = []
SceRegMgrForDriver_stub = []
SceRegMgrServiceForDriver_stub = []
SceRegistryMgr_stub = []
SceRtcForDriver_stub = []
SceRtc_stub = []
SceRudp_stub = []
SceSas_stub = []
SceSblACMgrForDriver_stub = []
SceSblACMgrForKernel_stub = []
SceSblACMgr_stub = []
SceSblAIMgrForDriver_stub = []
SceSblAuthMgrForDriver_stub = []
SceSblAuthMgrForKernel_stub = []
SceSblFwLoaderForDriver_stub = []
SceSblGcAuthMgr_stub = []
SceSblPostSsMgrForDriver_stub = []
SceSblPostSsMgr_stub = []
SceSblSmCommForKernel_stub = []
SceSblSmSchedProxyForKernel_stub = []
SceSblSsMgrForDriver_stub = []
SceSblSsMgrForKernel_stub = []
SceSblSsMgr_stub = []
SceSblUpdateMgr_stub = []
SceScreenShot_stub = []
SceSdifForDriver_stub = []
SceShaccCg_stub = []
SceShellSvc_stub = []
SceShutterSound_stub = []
SceSmart_stub = []
SceSqlite_stub = []
SceSsl_stub = []
SceStdio_0931_stub = []
SceSulpha_stub = []
SceSysconForDriver_stub = []
SceSysmemForDriver_0990_stub = []
SceSysmemForDriver_stub = []
SceSysmemForKernel_363_stub = []
SceSysmemForKernel_stub = []
SceSysmem_stub = []
SceSysmodule_stub = []
SceSysrootForDriver_stub = []
SceSysrootForKernel_stub = []
SceSystemGesture_stub = []
SceSystimerForDriver_stub = []
SceTeleportClient_stub = []
SceTeleportServer_stub = []
SceThreadmgrForDriver_stub = []
SceThreadmgrForKernel_363_stub = []
SceThreadmgrForKernel_stub = []
SceTouchForDriver_stub = []
SceTouch_stub = []
SceTriggerUtil_stub = []
SceUartForKernel_363_stub = []
SceUartForKernel_stub = []
SceUdcdForDriver_stub = []
SceUdcd_stub = []
SceUlobjMgr_stub = []
SceUlt_stub = []
SceUsbAudioForDriver_stub = []
SceUsbAudioIn_stub = []
SceUsbPspcm_stub = []
SceUsbSerialForDriver_stub = []
SceUsbSerial_stub = []
SceUsbServForDriver_stub = []
SceUsbServ_stub = []
SceUsbdForDriver_stub = []
SceUsbd_stub = []
SceUsbstorVStorDriver_stub = []
SceVideoExport_stub = []
SceVideodec_stub = []
SceVoiceQoS_stub = []
SceVoice_stub = []
SceVshBridge_stub = []
SceWlanBtForDriver_stub = []
SceWlanBt_stub = []
libScePiglet_stub = []
