[package]
name = "vitasdk-sys-build-util"
version = "0.1.0"
edition = "2021"
authors = ["Daria Sukhonina <dariasukhonina@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/vita-rust/vitasdk-sys"
homepage = "https://github.com/vita-rust/vitasdk-sys"
description = "Internal build utilities for raw bindings to vitasdk"
keywords = ["vitasdk", "psvita", "vita"]

[features]
link-visitor = ["dep:syn"]

[dependencies]
env_logger = "0.10.0"
log = "0.4.20"
serde = { version = "1.0.188", features = ["derive"] }
serde_yaml = "0.9.25"
syn = { version = "2.0.32", optional = true, default-features = false, features = ["parsing", "full", "printing", "visit-mut", "extra-traits"] }
toml = { version = "0.8.0", default-features = false, features = ["parse"] }
