[package]
name = "vitasdk-sys-build-util"
version = "0.2.0"
edition = "2021"
authors = ["Daria Sukhonina <dariasukhonina@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/vita-rust/vitasdk-sys"
homepage = "https://github.com/vita-rust/vitasdk-sys"
description = "Internal build utilities for raw bindings to vitasdk"
keywords = ["vitasdk", "psvita", "vita"]

[dependencies]
env_logger = "0.11.2"
log = "0.4.20"
serde = { version = "1.0.194", features = ["derive"] }
serde_yaml = "0.9.30"
syn = { version = "2.0.46", default-features = false, features = ["parsing", "full", "printing", "visit-mut", "extra-traits"] }
proc-macro2 = { version = "1.0.76", default-features = false }
toml = { version = "0.8.8", default-features = false, features = ["parse"] }
bindgen = "0.69.4"
quote = { version = "1.0.35", default-features = false }
doxygen-rs = "0.4"
lazy-regex = "3.1.0"
