[package]
name = "std-hello-world"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# Change the following line to require the current version of vitasdk-sys
vitasdk-sys = { path = "../.." }
rand = "0.8.5"

[profile.release]
# lto = true

[package.metadata.vita]
title_id = "RUST00001"
title_name = "Rust Hello World"
assets = "./static"
