[package]
name = "std-hello-world"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
rand = "0.8.5"

[dependencies.vitasdk-sys]
# Change the following line to require the current version of vitasdk-sys
path = "../.."
features = [
    "SceSysmem_stub",
    "SceDisplay_stub",
]

[package.metadata.vita]
title_id = "RUST00001"
title_name = "Rust Hello World"
assets = "./static"
